<resources>
    <string name="app_name">Demo2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="scan">Scan Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="serial_no">Serial Number</string>
    <string name="part_no">Part Number</string>
    <string name="qty">Quantity</string>
    <string name="latest_rackin">Latest Rack In</string>
    <string name="latest_rackout">Latest Rack Out</string>
    <string name="rack_id">Rack Id</string>
    <string name="date">Date: </string>
    <string name="handled_by">Handled By</string>
    <string name="qty_per_unit">Quantity (per Unit)</string>
    <string name="name">Name</string>
    <string name="transaction">Transaction</string>
    <string name="details">Details</string>
    <string name="clear">Clear</string>

    <string name="search_by">Search By: </string>
    <string name="item_name">Item Name: </string>
    <string-array name="serial_no_selection">
        <item> </item>
        <item>1</item>
        <item>1a</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="nav_drawer_open">Open Navigation Bar</string>
    <string name="nav_drawer_close">Close Navigation Bar</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_search2">Search2Activity</string>
    <string name="title_activity_search1">Search1Activity</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="error">Value Required</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="add_success">Added Successful!!</string>

    <string name="add_inventory">Add Inventory</string>
</resources>