<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/register" />

        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/scan" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_keyboard_backspace_24"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/part_no">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_searchActivity"
                android:icon="@drawable/ic_baseline_search_24"
                android:title="@string/search" />
            <item
                android:id="@+id/nav_add_inventory"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="Details" />

            <item
                android:id="@+id/nav_displayViewActivity"
                android:icon="@drawable/ic_baseline_backpack_24"
                android:title="View Inventory" />
        </menu>

    </item>


</menu>