<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/search"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="my.edu.tarc.demo2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_inventory"
        android:name="my.edu.tarc.demo2.ui.New_Inventory.NewInventory"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_new_inventory" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="my.edu.tarc.demo2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow"/>

    <activity
        android:id="@+id/nav_searchActivity"
        android:name="my.edu.tarc.demo2.ui.search.SearchActivity"
        android:label="SearchActivity"
        tools:layout="@layout/activity_search" />
    <activity
        android:id="@+id/nav_login"
        android:name="my.edu.tarc.demo2.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/nav_register"
        android:name="my.edu.tarc.demo2.login.RegistrationActivity"
        android:label="activity_registration"
        tools:layout="@layout/activity_registration" />
    <activity
        android:id="@+id/nav_logout"
        android:name="my.edu.tarc.demo2.login.SignoutActivity"
        android:label="activity_signout"
        tools:layout="@layout/activity_signout" />
    <activity
        android:id="@+id/nav_scan"
        android:name="my.edu.tarc.demo2.scan.ScanActivity"
        android:label="activity_scan"
        tools:layout="@layout/activity_scan" />
    <fragment
        android:id="@+id/nav_searchFragDetails"
        android:name="my.edu.tarc.demo2.ui.search.SearchFragDetails"
        android:label="fragment_search_frag_details"
        tools:layout="@layout/fragment_search_frag_details" />
    <activity
        android:id="@+id/nav_displayViewActivity"
        android:name="my.edu.tarc.demo2.ui.search.DisplayViewActivity"
        android:label="DisplayViewActivity" />


</navigation>