<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TransFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragTransaction"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    <!-- TODO: Update blank fragment layout -->


    <TableLayout
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/date" />

            <TextView
                android:id="@+id/handledBy"
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/handled_by" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="124dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/qty_per_unit" />
        </TableRow>
    </TableLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/scrollable_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </ScrollView>

</LinearLayout>