<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/recycle_view"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/displaySerialNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arya"
                android:layout_marginStart="26dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPartNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/part_no"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/displayPartNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:text="Arya" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:text="@string/qty"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/displayQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:text="Arya" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRackIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:text="@string/latest_rackin"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/displayRackIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:text="Arya" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRackOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:text="@string/latest_rackout"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/displayRackOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:text="Arya" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRackid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:text="@string/rack_id"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/displayRackId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:text="Arya" />
            </LinearLayout>
        </LinearLayout>


</androidx.cardview.widget.CardView>